tests/NormalTests/paczka1/fuzzy1/57727611.err
Error in line 1: 5AZx84uCqN S468 84,0
Error in line 6: A23 A23 19,5
Error in line 12: A23 S468 62,0
Error in line 10: 5AZx84uCqN S394 80,8
Error in line 22: 5AZx84uCqN A23 416,3
Error in line 40: 8Y4i3p2 S468 25,30
